# typejson

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
rust/: Cargo.toml
rust/src/: lib.rs
tests/: test_all.py
typejson/: __init__.py  _rust.pyi  aliases.py
